<resources>
    <string name="app_name">TravelToAbazashta</string>
    <string name="my_profile">мой профиль</string>
    <string name="links">сслыки</string>
    <string name="about_us">о нас</string>
    <string name="input">войти</string>
    <string name="add_users">добавить</string>
    <string name="registration">зарегистрироваться</string>
    <string name="history">история</string>
    <string name="culture">культура</string>
    <string name="language">язык</string>
    <string name="start">Начать</string>
    <string name="next">далее</string>
    <string name="info">справка</string>
</resources>
