<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_mountain"
    android:orientation="vertical"
    tools:context=".view.SelectTest">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:src="@drawable/mountain" />

    <Button
        android:id="@+id/history"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/my_profile_back"
        android:onClick="startTest"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/history"
        android:textColor="@color/main_text_1"
        android:textSize="@dimen/main_text_size" />

    <Button
        android:id="@+id/language"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/about_us_back"
        android:onClick="startTest"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/language"
        android:textColor="@color/main_text_1"
        android:textSize="@dimen/main_text_size" />

    <Button
        android:id="@+id/culture"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/links_back"
        android:onClick="startTest"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/culture"
        android:textColor="@color/about_us_back"
        android:textSize="@dimen/main_text_size" />


</LinearLayout>